grammar.js
    source_file: $ => repeat(
      choice($._terminator, $.shebang, $.inner_attribute, $._statement),
    ),

    // [gram.lex.shebang] — trivia line; only meaningful at offset 0,
    // and never when `[` follows the `#!`: `#![…]` is the file-wide
    // attribute opener ([gram.attr.index]).
    _terminator: $ => choice(';', $._newline),
    _statement: $ => choice(
      $.function_item,
      $.struct_item,
      $.enum_item,
      $.type_item,
      $.trait_item,
      $.impl_item,
      $.use_declaration,
      $.import_c_declaration,
      $.let_declaration,
      $.var_declaration,
      $.const_declaration,
      $.error_item,
      $.assignment_statement,
      $.defer_statement,
      $.assume_statement,
      $.expression_statement,
    ),

    expression_statement: $ => seq(repeat($.attribute), $._expression),

    // Assignment is a statement, not an expression [gram.expr.assign].
    // `place` is any expression; place-ness is sema's check, not grammar's.
    //
    // The second arm is the one moded store (s182, wolf-lang#438, v0.2.17):
    // a plain `=` whose place is a container element may spell `take` on
    // its right-hand side — `xs[i] = take v`, `m[k] = take v` — and
    // nowhere else in an assignment may a mode appear. `x = take v`,
    // `s.f = take v`, `xs[0].f = take v` and every compound operator's
    // right-hand side stay ERROR nodes, as they stay E0201 in the
    // compiler. The left is `index_expression` because that is exactly
    // the compiler's test (`crates/wolf_parse/src/exprs.rs`: plain `=`,
    // a `BracketApply` head, then `Kw(Take)`) — the one postfix bracket
    // shape of [gram.amb.brackets]; whether the bracket is a container is
    // sema's. `take` is a token of the statement, not an expression and
    // not a `parameter_mode` (which would admit `mut`), so it is an
    // anonymous token under a `mode` field: no new node type, and
    // highlights.scm already paints `"take"`.
    assignment_statement: $ => choice(
      seq(
        repeat($.attribute),
        field('left', $._expression),
        field('operator', choice(
          '=', '+=', '-=', '*=', '/=', '%=',
          '&=', '|=', '^=', '<<=', '>>=',
        )),
        field('right', $._expression),
      ),
      // No dynamic precedence: tl13 needed `prec.dynamic(1, …)` here while
      // `take` was contextual, because `xs[0] = take (v)` also read as a
      // call `take(v)` and GLR picked the call inside a block. With `take`
      // reserved (#20, the `reserved` sets above) the call reading cannot
      // start, so the moded arm is the only one.
      seq(
        repeat($.attribute),
        field('left', $.index_expression),
        field('operator', '='),
        field('mode', 'take'),
        field('right', $._expression),
      ),
    ),

    function_item: $ => prec.right(seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      repeat($.function_qualifier),
      'fn',
      field('name', $.identifier),
      optional(field('type_parameters', $.generic_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      optional(field('body', $.block)),   // bodyless: extern / trait member
    )),

    parameters: $ => seq('(', commaSep($._parameter), ')'),

    _parameter: $ => choice($.parameter, $.self_parameter),

    parameter: $ => seq(
      optional($.parameter_mode),
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    // `self` is contextual: a keyword only in receiver position.
    let_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      'let',
      $.binder,
      repeat(seq(',', $.binder)),
    ),

    binder: $ => seq(
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
    ),

    _type: $ => choice(
      $.type_path,
      $.error_union_type,
      $.rowed_type,
      $.aliased_error_type,
      $.prefixed_type,
      $.pointer_type,
      $.dyn_type,
      $.tuple_type,
      $.unit_type,
      $.function_type,
      alias('type', $.type_keyword),      // the type of types (comptime)
      alias('region', $.region_type),     // first-class regions (X4)
    ),

    type_path: $ => prec.right(seq($.path, optional(field('type_arguments', $.type_arguments)))),

    path: $ => prec.right(seq($.identifier, repeat(seq('.', $.identifier)))),

    // `!T` — error union with inferred private row (D30).
    error_union_type: $ => prec.right(1, seq('!', $._type)),

    // `T ! {row}` — postfix row, first-class in every type position;
    // nested rows flatten ([gram.type.row.flatten], D51).
    rowed_type: $ => prec.left(2, seq($._type, '!', $.error_row)),

    // `T ! IoErrors` — s158 (wolf-lang#36), the brace-less tail that
    // names an error set declared by an `error_item`. The ebnf gives it
    // its own alternative (`type '!' path`) beside `type '!' error_row`,
    // and this grammar mirrors the ebnf rather than wolfc's tree, which
    // lowers both to one `ErrorRow`. A distinct node is also what the
    // highlighter needs: the path here is a TYPE reference in type
    // position, not one of the tags a bare `! {…}` row entry spells.
    error_row: $ => seq(
      '{',
      optional(commaSep1(choice($.row_entry, alias('..', $.open_row)))),
      '}',
    ),

    row_entry: $ => seq(
      $.path,
      optional(seq('(', commaSep1($._type), ')')),
    ),

    // `shared Config`, `handle Node`, `weak Parent`, `distinct Song`.
    _pattern: $ => choice($._closed_pattern, $.or_pattern),

    or_pattern: $ => prec.left(seq($._pattern, '|', $._pattern)),

    _closed_pattern: $ => choice(
      alias('_', $.wildcard_pattern),
      $._literal_pattern,
      $.range_pattern,
      $.identifier,
      $.path_pattern,
      $.tuple_pattern,
      $.constructor_pattern,
      $.struct_pattern,
      $.at_pattern,
    ),

    // [gram.pat.range] (s147, wolf-lang#287) — `match` in statement
    // position is wolf's switch, and the range arm is what the pattern
    // grammar lacked. `lo..hi` stops before `hi`, `lo..=hi` includes it.
    //
    //   closed_pattern ::= ... | literal ('..' | '..=') literal
    //
    // The production requires BOTH ends: `..hi` and `lo..` are the slice
    // spellings of [gram.expr.primary], not patterns, and the compiler
    // refuses them here (E0201) with a note naming the range form — so
    // nothing admits an open end. Whether the two endpoints agree on a
    // type (E0401), carry an order (E0808), or describe an empty range
    // (`5..5`, `9..=3`, E0815) is sema's; the grammar sees two literals.
    tuple_pattern: $ => seq('(', commaSep1($._pattern), ')'),

    constructor_pattern: $ => seq(
      field('type', $.path),
      '(',
      commaSep1($._pattern),
      ')',
    ),

    // [gram.pat.struct] (s129, #179): `Point { x, y: (a, b), .. }`.
    // Shorthand `x` binds the field's value under the field's own name;
    // a trailing `..` ignores every unnamed field. The production
    // requires at least one field_pat — a pattern that would ignore
    // every field is spelled `_` (the spec's word, not an omission).
    //
    // D67 (v0.2.2): the separator is REQUIRED throughout the pattern
    // family, and `..` follows a separator like one more member — the
    // production's tail is exactly `(',' '..'?)?`, so `Point { x, .. }`
    // parses, `Point { x, }` parses, and `Point { x .. }` does not.
    // That last spelling was le04's known gap: wolfgang accepted it as
    // an unlicensed recovery-loop accident, D67 ruled the production
    // the law, and s131 landed the tightening. `Point { x y }` and
    // `(a b)` — D67's other two named laxities — already ERRORed here.
    at_pattern: $ => seq(
      field('binding', $.identifier),
      '@',
      $._closed_pattern,
    ),

    // ========================================== expressions [gram.expr]

    _expression: $ => choice(
      $.identifier,
      $._literal,
      $.unary_expression,
      $.reference_expression,
      $.binary_expression,
      $.cast_expression,
      $.range_expression,
      $.from_end_expression,
      $.else_expression,
      $.call_expression,
      $.index_expression,
      $.field_expression,
      $.try_expression,
      $.list_expression,
      $.parenthesized_expression,
      $.tuple_expression,
      $.unit_expression,
      $.moded_receiver,
      $.struct_expression,
      $.block,
      $.if_expression,
      $.match_expression,
      $.for_expression,
      $.while_expression,
      $.loop_expression,
      $.closure_expression,
      $.region_expression,
      $.in_expression,
      $.scope_expression,
      $.select_expression,
      $.when_expression,
      $.unsafe_expression,
      $.spawn_expression,
      $.asm_expression,
      $.borrow_expression,
      $.return_expression,
      $.break_expression,
      $.continue_expression,
    ),

    // ------------------------------------------ blocks [gram.expr.block]

    // `block ::= '{' stmt* expr? '}'` with every stmt production ending
    // in TERM (`expr_stmt ::= expr TERM`, `let_item ::= … TERM`, …):
    // a statement is terminated, the block's trailing expression is not.
    //
    // le05 takes the TERM literally, because without it D69's struct
    // literal has an escape hatch. `let p = Point { x y }` cannot be a
    // struct_expression — `field_initializer_list` has always demanded
    // the separator — but GLR would re-read it as `let p = Point`
    // followed by a bare block statement `{ x y }` holding two
    // unterminated expression statements, and hand back a clean tree
    // where wolfc reports E0201. Requiring the TERM kills that reading
    // at its second statement, and the ERROR lands on the missing
    // separator. Measured: 104/104 corpus cases, 463 corpus files at
    // zero ERRORs, and a 21-spelling battery of legal one-liners,
    // tail expressions, nested items and comments all still parse.
    block: $ => seq(
      '{',
      repeat(choice($._terminator, seq($._statement, $._terminator))),
      optional($._statement),
      '}',
    ),

    // --------------------------------- operators & climb [gram.expr.prec]

    unary_expression: $ => prec(PREC.UNARY, seq(
      field('operator', choice('!', '-', '*', 'move', 'copy', 'shared', 'freeze')),
      field('operand', $._expression),
    )),

    // Tier-0 local borrows: `&x`, `&mut x` (second-class at boundaries).
    binary_expression: $ => {
      const table = [
        [PREC.MUL, choice('*', '/', '%')],
        [PREC.ADD, choice('+', '-')],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.BITAND, '&'],
        [PREC.BITXOR, '^'],
        [PREC.BITOR, '|'],
        [PREC.COMPARE, choice('==', '!=', '<', '>', '<=', '>=', '<=>')],
        [PREC.AND, '&&'],
        [PREC.OR, '||'],
      ];
      return choice(...table.map(([p, op]) => prec.left(p, seq(
        field('left', $._expression),
        field('operator', op),
        field('right', $._expression),
      ))));
    },

    else_expression: $ => prec.right(PREC.ELSE, seq(
      field('value', $._expression),
      newlineThenElse($),
      field('fallback', choice(
        $.else_handler,
        $._expression,
      )),
    )),

    call_expression: $ => prec(PREC.POSTFIX, seq(
      field('function', $._expression),
      field('arguments', $.arguments),
    )),

    // Call-site modes (X1): `f(mut x)`, `f(take conn)`.
    arguments: $ => seq('(', commaSep($.argument), ')'),

    argument: $ => seq(optional($.parameter_mode), $._expression),

    // `e[…]` — one postfix shape for indexing AND generic application
    // [gram.amb.brackets]; admits type-only argument forms.
    field_expression: $ => prec(PREC.POSTFIX, seq(
      field('value', $._expression),
      '.',
      field('field', reserved('member', choice($.identifier, $.integer_literal))),
    )),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    if_expression: $ => choice(
      prec.right(PREC.IF_BRACED, seq(
        'if',
        field('condition', $._expression),
        optional('then'),
        field('consequence', $.block),
        optional(seq(
          newlineThenElse($),
          field('alternative', choice($.if_expression, $.block)),
        )),
      )),
      prec.right(PREC.IF_BARE, seq(
        'if',
        field('condition', $._expression),
        'then',
        field('consequence', $._expression),
        optional(seq(
          newlineThenElse($),
          field('alternative', $._expression),
        )),
      )),
    ),

    match_expression: $ => seq(
      'match',
      field('value', $._expression),
      field('body', $.match_body),
    ),

    match_body: $ => seq(
      '{',
      repeat(choice($.match_arm, ',', $._terminator)),
      '}',
    ),

    match_arm: $ => prec.right(seq(
      field('pattern', $._pattern),
      optional(seq('if', field('guard', $._expression))),
      '=>',
      field('body', $._expression),
    )),

    for_expression: $ => seq(
      'for',
      field('pattern', $._pattern),
      'in',
      field('value', $._expression),
      field('body', $.block),
    ),

    while_expression: $ => seq(
      'while',
      field('condition', $._expression),
      field('body', $.block),
    ),

    loop_expression: $ => seq('loop', field('body', $.block)),

    return_expression: $ => prec.right(seq('return', optional($._expression))),
    break_expression: $ => prec.right(seq('break', optional($._expression))),
    continue_expression: _ => 'continue',

    // ---------------------------------------- closures [gram.expr.closure]

    // Expression bodies extend maximally rightward [gram.amb.closure].
    closure_expression: $ => prec.right(seq(
      'fn',
      field('parameters', $.closure_parameters),
      field('body', $._expression),
    )),

    closure_parameters: $ => seq('(', commaSep($.closure_parameter), ')'),

    scope_expression: $ => seq(
      'scope',
      optional(field('name', $.identifier)),
      field('body', $.block),
    ),

    spawn_expression: $ => seq(
      'spawn',
      'proc',
      field('function', $.path),
      field('arguments', $.arguments),
    ),

    select_expression: $ => seq(
      'select',
      '{',
      repeat(choice($.select_arm, ',', $._terminator)),
      '}',
    ),

    // `from` and `timeout` are contextual [gram.inv.ctx].
    select_arm: $ => prec.right(choice(
      seq(
        field('pattern', $._pattern),
        'from',
        field('channel', $._expression),
        '=>',
        field('body', $._expression),
      ),
      seq(
        'timeout',
        '(',
        field('duration', $._expression),
        ')',
        '=>',
        field('body', $._expression),
      ),
    )),

    when_expression: $ => seq(
      'when',
      '(',
      $._expression,
      repeat1(seq(',', $._expression)),
      optional(','),
      ')',
      field('body', $.block),
    ),

    // ------------------------------------- unsafe tier [gram.expr.unsafe]

    boolean_literal: _ => choice('true', 'false'),

    char_literal: _ => token(seq(
      "'",
      choice(
        /[^'\\\r\n]/,
        /\\[ntr0\\'"]/,
        /\\x[0-9a-fA-F]{2}/,
        /\\u\{[0-9a-fA-F]{1,6}\}/,
      ),
      "'",
    )),

    // Digits on BOTH sides of the dot ([gram.lex.number]); `1.e5` is
    // member access, `1e5` is a float.
    string_literal: $ => seq(
      '"',
      repeat(choice(
        $._string_content,
        $.escape_sequence,
        $.invalid_escape,
        $.brace_escape,
        $.interpolation,
      )),
      '"',
    ),

    _string_content: _ => token.immediate(prec(1, /[^"\\{\r\n]+/)),

    // `{{` and `}}` are literal braces [gram.lex.str.escape].
    identifier: _ => /[_\p{XID_Start}][\p{XID_Continue}]*/,
  },
});
